--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -6,8 +6,12 @@
         <li><%= link_to t("home"), root_path %></li>
         <li><%= link_to t("help"), pages_path(page: "help") %></li>
         <li><%= link_to t("about"), pages_path(page: "about") %></li>
-        <li><%= link_to t("sign_in"), "#" %></li>
-        <li><%= link_to t("sign_up"), "#" %></li>
+        <% if user_signed_in? %>
+          <li><%= link_to t("log_out"), destroy_user_session_path, method: :delete %></li>
+        <% else %>
+          <li><%= link_to t("sign_in"), new_user_session_path %></li>
+          <li><%= link_to t("sign_up"), new_user_registration_path %></li>
+        <% end %>
       </ul>
     </div>
   </div>
