Add category, courses, lesson controllers

--- a/app/assets/stylesheets/elearning.scss
+++ b/app/assets/stylesheets/elearning.scss
@@ -136,3 +136,14 @@ input {
     color: $red;
   }
 }
+
+.course-list {
+  .img-course {
+    height: 160px;
+    width: 100%;
+  }
+
+  .course-item {
+    margin-bottom: 50px;
+  }
+}
