--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,6 +1,6 @@
 <footer class="site-footer site-section">
   <div class="row">
-    <div class="col-md-5 follow-me">
+    <div class="col-md-4 follow-me">
       <h4><%= t "follow_us" %></h4>
       <ul class="footer-nav-social">
         <li><%= link_to "", "https://www.facebook.com",
@@ -17,8 +17,14 @@
     <div class="col-md-5 copyright">
       <h4><%= t "framgia_e_learning" %></h4>
       <p><%= t "provide_best_quality" %></p>
+      <p>© <%= Date.today.year %>.<%= Date.today.month %>.<%= Date.today.day %></p>
     </div>
-
+    <div class="col-md-1 help">
+      <li><%= link_to t("help"), pages_path(page: "help") %></li>
+    </div>
+    <div class="col-md-1 about">
+      <li><%= link_to t("about"), pages_path(page: "about") %></li>
+    </div>
     <div class="col-md-2 translate">
     </div>
   </div>
