--- a/app/views/courses/_course_item2.html.erb
+++ b/app/views/courses/_course_item2.html.erb
@@ -7,6 +7,6 @@
     <h3><%= link_to course.name, course %></h3>
     <p><%= t "you_learn" %></p>
     <p><%= course.description %></p>
-    <%= link_to t("start_lesson"), lessons_path, class: "btn btn-primary" %>
+    <%= render "courses/course_button", course: course %>
   </div>
 </div>
