--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,25 @@
 <% provide :title, t("home") %>
-<h1><%= t "e-learning" %></h1>
-<p><%= t "this_would_be_a_static_home_page" %></p>
-<p>© <%= Date.today.year %>.<%= Date.today.month %>.<%= Date.today.day %></p>
+<% if signed_in? %>
+  <div class="row">
+    <aside class="col-md-4">
+      <div class="row">
+        <section class="user_info">
+          <%= render "shared/user_info", user: current_user %>
+        </section>
+      </div>
+      <div class="row">
+        <section class="stats">
+          <%= render "shared/stats", user: @user %>
+        </section>
+      </div>
+    </aside>
+      <div class="col-md-3">
+        <%= link_to t("word_list"), "#", class: "btn btn-primary home-button" %>
+      </div>
+      <div class="col-md-3 col-md-offset-1">
+        <%= link_to t("my_courses"), "#", class: "btn btn-primary home-button" %>
+      </div>
+    </div>
+<% else %>
+  <h1><%= t "wellcome" %></h1>
+<% end %>
