--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,3 +1,6 @@
+<% provide :title, t("categories") %>
+
+<h1><%= t "categories_list" %></h1>
 <ul class="categories">
   <%= render @categories %>
 </ul>
