--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,6 +1,9 @@
 <% provide :title, @category.name %>
 
-<h1 class="category-name"><%= link_to @category.name, @category%></h1>
+<h1 class="category-name">
+  <%= t "courses_in" %>
+  <%= link_to @category.name, @category%>
+</h1>
 <div class="course-list">
   <% @courses.each_with_index do |course, index| %>
     <% if index.even? %>
