--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,1 +1,15 @@
-<h1><%= t "sign_up" %></h1>
+<% provide :title, @user.name %>
+
+<div class="row">
+  <aside class="col-md-4">
+    <div class="row">
+      <section class="user_info">
+        <%= render "shared/user_info", user: @user %>
+      </section>
+    </div>
+    <div class="row">
+        <%= render "shared/stats", user: @user,
+          destroy: @relationship_destroy, build: @relationship_build %>
+    </div>
+  </aside>
+</div>
