--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,3 +1,6 @@
+<% if user_signed_in? && current_user.is_admin %>
+  <%= link_to t("new_category"), new_category_path, class: "btn btn-primary" %>
+<% end %>
 <ul class="categories">
   <%= render @categories %>
 </ul>
