Admin action: category, course

--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,6 +1,9 @@
 <% provide :title, t("categories") %>
 
 <h1><%= t "categories_list" %></h1>
+<% if user_signed_in? && current_user.is_admin %>
+  <%= link_to t("new_category"), new_category_path, class: "btn btn-primary" %>
+<% end %>
 <ul class="categories">
   <%= render @categories %>
 </ul>
