--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -4,6 +4,10 @@
   <%= t "courses_in" %>
   <%= link_to @category.name, @category%>
 </h1>
+<h1 class="category-name"><%= link_to @category.name, @category%></h1>
+<% if user_signed_in? && current_user.is_admin %>
+  <%= link_to t("new_course"), new_course_path(category_id: @category.id), class: "btn btn-primary" %>
+<% end %>
 <div class="course-list">
   <% @courses.each_with_index do |course, index| %>
     <% if index.even? %>
