--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -4,14 +4,20 @@
     <div>
       <ul class="nav navbar-nav navbar-right">
         <li><%= link_to t("home"), root_path %></li>
-        <li class="dropdown">
-          <%= link_to t("categories"), categories_path %>
-          <ul class="dropdown-menu dropdown-menu-left scroll-menu" roll="menu">
-            <% all_categories.each do |category| %>
-              <li><%= link_to category.name, category %></li>
-            <% end %>
-          </ul>
-        </li>
+        <% if user_signed_in? && current_user.is_admin? %>
+          <li><%= link_to t("users"), admin_users_path %></li>
+          <li><%= link_to t("categories"), admin_categories_path %></li>
+        <% else %>
+          <li><%= link_to t("users"), users_path %></li>
+          <li class="dropdown">
+            <%= link_to t("categories"), categories_path %>
+            <ul class="dropdown-menu dropdown-menu-left scroll-menu" roll="menu">
+              <% all_categories.each do |category| %>
+                <li><%= link_to category.name, category %></li>
+              <% end %>
+            </ul>
+          </li>
+        <% end %>
         <% if user_signed_in? %>
           <li class="dropdown">
             <%= link_to current_user.name, current_user %>
