--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -9,7 +9,7 @@
     </div>
     <div class="row">
         <%= render "shared/stats", user: @user,
-          destroy: @relationship_destroy, build: @relationship_build %>
+          destroy: @supports.relationship_destroy, build: @supports.relationship_build %>
     </div>
   </aside>
   <div class="col-md-9">
