--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -8,7 +8,7 @@
           <li><%= link_to t("users"), admin_users_path %></li>
           <li><%= link_to t("categories"), admin_categories_path %></li>
         <% else %>
-          <li><%= link_to t("users"), users_path %></li>
+          <li><%= link_to(t("users"), users_path) if user_signed_in? %><li>
           <li class="dropdown">
             <%= link_to t("categories"), categories_path %>
             <ul class="dropdown-menu dropdown-menu-left scroll-menu" roll="menu">
