--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -16,10 +16,12 @@
       </div>
     </aside>
     <div class="col-md-3">
-      <%= link_to t("word_list"), "#", class: "btn btn-primary home-button" %>
+      <%= link_to t("word_list"), wordlist_filters_path(current_user.id),
+        class: "btn btn-primary home-button" %>
     </div>
     <div class="col-md-3 col-md-offset-1">
-      <%= link_to t("my_courses"), "#", class: "btn btn-primary home-button" %>
+      <%= link_to t("my_lessons"), user_lessons_path(current_user.id),
+        class: "btn btn-primary home-button" %>
     </div>
   </div>
   <div class="row">
@@ -32,7 +34,7 @@
           <%= render @tests %>
         </ol>
         <%= will_paginate @tests %>
-      <% end %>  
+      <% end %>
     </div>
   </div>
 <% else %>
