--- a/app/assets/stylesheets/elearning.scss
+++ b/app/assets/stylesheets/elearning.scss
@@ -14,6 +14,7 @@ $input-form: #bbb;
 $grey: #666560;
 $blue: #00f;
 $black: #000;
+$gray-lighter: #e0e0e0;
 
 html,
 body {
@@ -286,5 +287,27 @@ footer {
     margin-bottom: 50px;
     margin-top: 0;
     text-align: center;
+  }
+}    
+
+.test {
+  list-style: none;
+  padding: 0;
+
+  li {
+    border-top: 1px solid $gray-lighter;
+    padding: 10px 0;
+  }
+
+  .content {
+    display: block;
+    margin-left: 60px;
+    margin-top: 20px;
+  }
+
+  .gravatar {
+    float: left;
+    margin-right: 10px;
+    margin-top: 5px;
   }
 }
